--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,7 +4,7 @@ layout: default
 
 <div class="post-wrapper">
   <div class="container">
-    <article class="post" itemscope itemtype="http://schema.org/BlogPosting">
+    <article class="post">
 
       <!-- 포스트 헤더 -->
       <header class="post-header">
